chore: Update experimentation.ipynb

--- a/dev/swebench/experimentation.ipynb
+++ b/dev/swebench/experimentation.ipynb
@@ -138,23 +138,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:torchao.kernel.intmm:Warning: Detected no triton, on systems without Triton certain kernels will not work\n",
-      "WARNING:swea-lm:Model openrouter/anthropic/claude-3.5-haiku does not support function calling. If your model does not support function calling, you can use `parse_function='thought_action'` instead. See https://swe-agent.com/latest/faq/ for more information.\n",
-      "WARNING:swea-agent:Requerying model after FunctionCallingFormatError (1th requery)\n",
-      "WARNING:swea-agent:Your last output did not use any tool calls!\n",
-      "Please make sure your output includes exactly _ONE_ function call!\n",
-      "You must invoke the function directly using the function call format.\n",
-      "You cannot invoke commands with ```, you have to use the function call format.\n",
-      "If you think you have already resolved the issue, please submit your changes by running the `submit` command.\n",
-      "If you think you cannot solve the problem, please run `exit_forfeit` (if available) or `submit`.\n",
-      "Else, please continue with a new tool call!\n"
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-agent:Requerying model after FormatError (1th requery)\n",
+      "WARNING:swea-agent:Your action could not be parsed properly: No function found in model response..\n",
+      "\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
+      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n"
      ]
     },
     {
@@ -182,7 +189,7 @@
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"background-color: #272822\">                                                                                                                   </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># The patch has been saved to your local filesystem at:</span><span style=\"background-color: #272822\">                                                           </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">PATCH_FILE_PATH</span><span style=\"color: #ff4689; text-decoration-color: #ff4689; background-color: #272822\">=</span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">'/Users/brad/github/OpenPipe/agent-reinforcement-training/dev/swebench/trajectories/brad/no_confi</span><span style=\"background-color: #272822\"> </span>\n",
-       "<span style=\"background-color: #272822\"> </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">_openrouter/anthropic/claude-3.5-haiku__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'</span><span style=\"background-color: #272822\">                      </span>\n",
+       "<span style=\"background-color: #272822\"> </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">_openrouter/qwen/qwen3-32b__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'</span><span style=\"background-color: #272822\">                                  </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># Inspect it:</span><span style=\"background-color: #272822\">                                                                                                     </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">cat </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">\"${</span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">PATCH_FILE_PATH</span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">}\"</span><span style=\"background-color: #272822\">                                                                                          </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># Apply it to a local repository:</span><span style=\"background-color: #272822\">                                                                                 </span>\n",
@@ -195,7 +202,7 @@
        "\u001b[48;2;39;40;34m                                                                                                                   \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# The patch has been saved to your local filesystem at:\u001b[0m\u001b[48;2;39;40;34m                                                          \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mPATCH_FILE_PATH\u001b[0m\u001b[38;2;255;70;137;48;2;39;40;34m=\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m'/Users/brad/github/OpenPipe/agent-reinforcement-training/dev/swebench/trajectories/brad/no_confi\u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
-       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m_openrouter/anthropic/claude-3.5-haiku__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'\u001b[0m\u001b[48;2;39;40;34m                     \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
+       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m_openrouter/qwen/qwen3-32b__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'\u001b[0m\u001b[48;2;39;40;34m                                 \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# Inspect it:\u001b[0m\u001b[48;2;39;40;34m                                                                                                    \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mcat\u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m\"\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m${\u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mPATCH_FILE_PATH\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m}\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m\"\u001b[0m\u001b[48;2;39;40;34m                                                                                         \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# Apply it to a local repository:\u001b[0m\u001b[48;2;39;40;34m                                                                                \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
@@ -214,9 +221,9 @@
     "\n",
     "model = art.Model(\n",
     "    # name=\"openrouter/google/gemini-2.5-flash-preview-05-20\",\n",
-    "    name=\"openrouter/anthropic/claude-3.5-haiku\",\n",
+    "    name=\"openrouter/qwen/qwen3-32b\",\n",
     "    project=\"sweagent\",\n",
-    "    config=ModelConfig(max_input_tokens=131072),\n",
+    "    config=ModelConfig(xml_function_calling=True),\n",
     ")\n",
     "\n",
     "trajectory, run_single = await rollout(\n",
