--- a/dev/swebench/experimentation.ipynb
+++ b/dev/swebench/experimentation.ipynb
@@ -138,30 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
       "WARNING:swea-agent:Requerying model after FormatError (1th requery)\n",
       "WARNING:swea-agent:Your action could not be parsed properly: No function found in model response..\n",
-      "\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n",
-      "WARNING:swea-lm:No max input tokens found for model 'openrouter/qwen/qwen3-32b'. If you are using a local model, you can set `max_input_token` in the model config to override this.\n"
+      "\n"
      ]
     },
     {
@@ -188,8 +174,8 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"background-color: #272822\">                                                                                                                   </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># The patch has been saved to your local filesystem at:</span><span style=\"background-color: #272822\">                                                           </span>\n",
-       "<span style=\"background-color: #272822\"> </span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">PATCH_FILE_PATH</span><span style=\"color: #ff4689; text-decoration-color: #ff4689; background-color: #272822\">=</span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">'/Users/brad/github/OpenPipe/agent-reinforcement-training/dev/swebench/trajectories/brad/no_confi</span><span style=\"background-color: #272822\"> </span>\n",
-       "<span style=\"background-color: #272822\"> </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">_openrouter/qwen/qwen3-32b__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'</span><span style=\"background-color: #272822\">                                  </span>\n",
+       "<span style=\"background-color: #272822\"> </span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">PATCH_FILE_PATH</span><span style=\"color: #ff4689; text-decoration-color: #ff4689; background-color: #272822\">=</span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">'/home/sky/sky_workdir/dev/swebench/trajectories/sky/no_config__openai/Qwen/Qwen3-32B__t-1.00__p-</span><span style=\"background-color: #272822\"> </span>\n",
+       "<span style=\"background-color: #272822\"> </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">00__c-0.00___26201e/26201e/26201e.patch'</span><span style=\"background-color: #272822\">                                                                          </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># Inspect it:</span><span style=\"background-color: #272822\">                                                                                                     </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">cat </span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">\"${</span><span style=\"color: #f8f8f2; text-decoration-color: #f8f8f2; background-color: #272822\">PATCH_FILE_PATH</span><span style=\"color: #e6db74; text-decoration-color: #e6db74; background-color: #272822\">}\"</span><span style=\"background-color: #272822\">                                                                                          </span>\n",
        "<span style=\"background-color: #272822\"> </span><span style=\"color: #959077; text-decoration-color: #959077; background-color: #272822\"># Apply it to a local repository:</span><span style=\"background-color: #272822\">                                                                                 </span>\n",
@@ -201,8 +187,8 @@
       "text/plain": [
        "\u001b[48;2;39;40;34m                                                                                                                   \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# The patch has been saved to your local filesystem at:\u001b[0m\u001b[48;2;39;40;34m                                                          \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
-       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mPATCH_FILE_PATH\u001b[0m\u001b[38;2;255;70;137;48;2;39;40;34m=\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m'/Users/brad/github/OpenPipe/agent-reinforcement-training/dev/swebench/trajectories/brad/no_confi\u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
-       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m_openrouter/qwen/qwen3-32b__t-1.00__p-1.00__c-0.00___26201e/26201e/26201e.patch'\u001b[0m\u001b[48;2;39;40;34m                                 \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
+       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mPATCH_FILE_PATH\u001b[0m\u001b[38;2;255;70;137;48;2;39;40;34m=\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m'/home/sky/sky_workdir/dev/swebench/trajectories/sky/no_config__openai/Qwen/Qwen3-32B__t-1.00__p-\u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
+       "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m00__c-0.00___26201e/26201e/26201e.patch'\u001b[0m\u001b[48;2;39;40;34m                                                                         \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# Inspect it:\u001b[0m\u001b[48;2;39;40;34m                                                                                                    \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mcat\u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34m \u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m\"\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m${\u001b[0m\u001b[38;2;248;248;242;48;2;39;40;34mPATCH_FILE_PATH\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m}\u001b[0m\u001b[38;2;230;219;116;48;2;39;40;34m\"\u001b[0m\u001b[48;2;39;40;34m                                                                                         \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
        "\u001b[48;2;39;40;34m \u001b[0m\u001b[38;2;149;144;119;48;2;39;40;34m# Apply it to a local repository:\u001b[0m\u001b[48;2;39;40;34m                                                                                \u001b[0m\u001b[48;2;39;40;34m \u001b[0m\n",
@@ -221,9 +207,16 @@
     "\n",
     "model = art.Model(\n",
     "    # name=\"openrouter/google/gemini-2.5-flash-preview-05-20\",\n",
-    "    name=\"openrouter/qwen/qwen3-32b\",\n",
+    "    # name=\"openrouter/qwen/qwen3-32b\",\n",
+    "    name=\"Qwen/Qwen3-32B\",\n",
     "    project=\"sweagent\",\n",
-    "    config=ModelConfig(xml_function_calling=True),\n",
+    "    config=ModelConfig(\n",
+    "        max_input_tokens=32_768,\n",
+    "        system_prompt_suffix=\"\\n/no_think\",\n",
+    "        xml_function_calling=True,\n",
+    "    ),\n",
+    "    inference_api_key=\"default\",\n",
+    "    inference_base_url=\"http://0.0.0.0:8000/v1\",\n",
     ")\n",
     "\n",
     "trajectory, run_single = await rollout(\n",
@@ -235,6 +228,26 @@
     "    return_run_single=True,\n",
     "    run_in_thread=False,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trajectory.reward"
    ]
   }
  ],
@@ -254,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
