--- a/dev/swebench/experimentation.ipynb
+++ b/dev/swebench/experimentation.ipynb
@@ -168,8 +168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 05-30 20:34:42 [importing.py:53] Triton module has been replaced with a placeholder.\n",
-      "INFO 05-30 20:34:42 [__init__.py:239] Automatically detected platform cuda.\n"
+      "INFO 05-30 21:04:42 [importing.py:53] Triton module has been replaced with a placeholder.\n",
+      "INFO 05-30 21:04:42 [__init__.py:239] Automatically detected platform cuda.\n"
      ]
     },
     {
@@ -188,8 +188,8 @@
      "text": [
       "🦥 Unsloth: Will patch your computer to enable 2x faster free finetuning.\n",
       "🦥 Unsloth Zoo will now patch everything to make training faster!\n",
-      "INFO 05-30 20:34:50 [importing.py:53] Triton module has been replaced with a placeholder.\n",
-      "INFO 05-30 20:34:50 [__init__.py:239] Automatically detected platform cuda.\n",
+      "INFO 05-30 21:04:49 [importing.py:53] Triton module has been replaced with a placeholder.\n",
+      "INFO 05-30 21:04:49 [__init__.py:239] Automatically detected platform cuda.\n",
       "==((====))==  Unsloth 2025.5.1: Fast Qwen3 patching. Transformers: 4.51.3. vLLM: 0.8.5.post1.\n",
       "   \\\\   /|    NVIDIA H200. Num GPUs = 1. Max memory: 139.719 GB. Platform: Linux.\n",
       "O^O/ \\_/ \\    Torch: 2.6.0+cu124. CUDA: 9.0. CUDA Toolkit: 12.4. Triton: 3.2.0\n",
@@ -200,14 +200,14 @@
       "Unsloth: Your GPU has CUDA compute capability 9.0 with VRAM = 139.72 GB.\n",
       "Unsloth: Using conservativeness = 1.0. Chunked prefill tokens = 32768. Num Sequences = 400.\n",
       "Unsloth: vLLM's KV Cache can use up to 90.04 GB. Also swap space = 6 GB.\n",
-      "INFO 05-30 20:34:59 [config.py:717] This model supports multiple tasks: {'score', 'embed', 'classify', 'reward', 'generate'}. Defaulting to 'generate'.\n",
+      "INFO 05-30 21:04:58 [config.py:717] This model supports multiple tasks: {'embed', 'reward', 'classify', 'generate', 'score'}. Defaulting to 'generate'.\n",
       "Unsloth: vLLM Bitsandbytes config using kwargs = {'load_in_8bit': False, 'load_in_4bit': True, 'bnb_4bit_compute_dtype': 'bfloat16', 'bnb_4bit_quant_storage': 'uint8', 'bnb_4bit_quant_type': 'nf4', 'bnb_4bit_use_double_quant': True, 'llm_int8_enable_fp32_cpu_offload': False, 'llm_int8_has_fp16_weight': False, 'llm_int8_skip_modules': ['lm_head', 'multi_modal_projector', 'merger', 'modality_projection'], 'llm_int8_threshold': 6.0}\n",
-      "INFO 05-30 20:34:59 [llm_engine.py:240] Initializing a V0 LLM engine (v0.8.5.post1) with config: model='unsloth/qwen3-32b-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen3-32b-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=bitsandbytes, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='auto', reasoning_backend=None), observability_config=ObservabilityConfig(show_hidden_metrics=False, otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen3-32b-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[400,392,384,376,368,360,352,344,336,328,320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":400}, use_cached_outputs=False, \n",
-      "INFO 05-30 20:34:59 [cuda.py:292] Using Flash Attention backend.\n",
-      "INFO 05-30 20:35:00 [parallel_state.py:1004] rank 0 in world size 1 is assigned as DP rank 0, PP rank 0, TP rank 0\n",
-      "INFO 05-30 20:35:00 [model_runner.py:1108] Starting to load model unsloth/qwen3-32b-bnb-4bit...\n",
-      "INFO 05-30 20:35:00 [loader.py:1187] Loading weights with BitsAndBytes quantization. May take a while ...\n",
-      "INFO 05-30 20:35:00 [weight_utils.py:265] Using model weights format ['*.safetensors']\n"
+      "INFO 05-30 21:04:59 [llm_engine.py:240] Initializing a V0 LLM engine (v0.8.5.post1) with config: model='unsloth/qwen3-32b-bnb-4bit', speculative_config=None, tokenizer='unsloth/qwen3-32b-bnb-4bit', skip_tokenizer_init=False, tokenizer_mode=auto, revision=None, override_neuron_config=None, tokenizer_revision=None, trust_remote_code=False, dtype=torch.bfloat16, max_seq_len=32768, download_dir=None, load_format=bitsandbytes, tensor_parallel_size=1, pipeline_parallel_size=1, disable_custom_all_reduce=False, quantization=bitsandbytes, enforce_eager=False, kv_cache_dtype=auto,  device_config=cuda:0, decoding_config=DecodingConfig(guided_decoding_backend='auto', reasoning_backend=None), observability_config=ObservabilityConfig(show_hidden_metrics=False, otlp_traces_endpoint=None, collect_model_forward_time=False, collect_model_execute_time=False), seed=0, served_model_name=unsloth/qwen3-32b-bnb-4bit, num_scheduler_steps=16, multi_step_stream_outputs=True, enable_prefix_caching=True, chunked_prefill_enabled=False, use_async_output_proc=True, disable_mm_preprocessor_cache=False, mm_processor_kwargs=None, pooler_config=None, compilation_config={\"level\":0,\"splitting_ops\":[],\"compile_sizes\":[],\"cudagraph_capture_sizes\":[400,392,384,376,368,360,352,344,336,328,320,312,304,296,288,280,272,264,256,248,240,232,224,216,208,200,192,184,176,168,160,152,144,136,128,120,112,104,96,88,80,72,64,56,48,40,32,24,16,8,4,2,1],\"max_capture_size\":400}, use_cached_outputs=False, \n",
+      "INFO 05-30 21:04:59 [cuda.py:292] Using Flash Attention backend.\n",
+      "INFO 05-30 21:04:59 [parallel_state.py:1004] rank 0 in world size 1 is assigned as DP rank 0, PP rank 0, TP rank 0\n",
+      "INFO 05-30 21:04:59 [model_runner.py:1108] Starting to load model unsloth/qwen3-32b-bnb-4bit...\n",
+      "INFO 05-30 21:04:59 [loader.py:1187] Loading weights with BitsAndBytes quantization. May take a while ...\n",
+      "INFO 05-30 21:05:00 [weight_utils.py:265] Using model weights format ['*.safetensors']\n"
      ]
     },
     {
@@ -215,16 +215,16 @@
      "output_type": "stream",
      "text": [
       "Loading safetensors checkpoint shards:   0% Completed | 0/4 [00:00<?, ?it/s]\n",
-      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:02,  1.48it/s]\n",
-      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:01<00:01,  1.36it/s]\n",
-      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:02<00:00,  1.31it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.31it/s]\n",
-      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.33it/s]\n",
+      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:02,  1.42it/s]\n",
+      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:01<00:01,  1.30it/s]\n",
+      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:02<00:00,  1.28it/s]\n",
+      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.29it/s]\n",
+      "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.30it/s]\n",
       "\n",
       "Loading safetensors checkpoint shards:   0% Completed | 0/4 [00:00<?, ?it/s]\n",
-      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:02,  1.49it/s]\n",
-      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:01<00:01,  1.35it/s]\n",
-      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:02<00:00,  1.30it/s]\n",
+      "Loading safetensors checkpoint shards:  25% Completed | 1/4 [00:00<00:01,  1.54it/s]\n",
+      "Loading safetensors checkpoint shards:  50% Completed | 2/4 [00:01<00:01,  1.37it/s]\n",
+      "Loading safetensors checkpoint shards:  75% Completed | 3/4 [00:02<00:00,  1.31it/s]\n",
       "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.30it/s]\n",
       "Loading safetensors checkpoint shards: 100% Completed | 4/4 [00:03<00:00,  1.32it/s]\n",
       "\n"
@@ -234,29 +234,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 05-30 20:35:06 [punica_selector.py:18] Using PunicaWrapperGPU.\n",
-      "INFO 05-30 20:35:07 [model_runner.py:1140] Model loading took 18.1555 GiB and 7.210429 seconds\n",
-      "INFO 05-30 20:35:13 [worker.py:287] Memory profiling takes 5.75 seconds\n",
-      "INFO 05-30 20:35:13 [worker.py:287] the current vLLM instance can use total_gpu_memory (139.72GiB) x gpu_memory_utilization (0.79) = 109.90GiB\n",
-      "INFO 05-30 20:35:13 [worker.py:287] model weights take 18.16GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 6.53GiB; the rest of the memory reserved for KV Cache is 85.07GiB.\n",
-      "INFO 05-30 20:35:13 [executor_base.py:112] # cuda blocks: 21777, # CPU blocks: 1536\n",
-      "INFO 05-30 20:35:13 [executor_base.py:117] Maximum concurrency for 32768 tokens per request: 10.63x\n",
-      "INFO 05-30 20:35:16 [model_runner.py:1450] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
+      "INFO 05-30 21:05:06 [punica_selector.py:18] Using PunicaWrapperGPU.\n",
+      "INFO 05-30 21:05:06 [model_runner.py:1140] Model loading took 18.1555 GiB and 6.599875 seconds\n",
+      "INFO 05-30 21:05:12 [worker.py:287] Memory profiling takes 5.72 seconds\n",
+      "INFO 05-30 21:05:12 [worker.py:287] the current vLLM instance can use total_gpu_memory (139.72GiB) x gpu_memory_utilization (0.79) = 109.90GiB\n",
+      "INFO 05-30 21:05:12 [worker.py:287] model weights take 18.16GiB; non_torch_memory takes 0.15GiB; PyTorch activation peak memory takes 6.53GiB; the rest of the memory reserved for KV Cache is 85.07GiB.\n",
+      "INFO 05-30 21:05:12 [executor_base.py:112] # cuda blocks: 21777, # CPU blocks: 1536\n",
+      "INFO 05-30 21:05:12 [executor_base.py:117] Maximum concurrency for 32768 tokens per request: 10.63x\n",
+      "INFO 05-30 21:05:15 [model_runner.py:1450] Capturing cudagraphs for decoding. This may lead to unexpected consequences if the model is not static. To run the model in eager mode, set 'enforce_eager=True' or use '--enforce-eager' in the CLI. If out-of-memory error occurs during cudagraph capture, consider decreasing `gpu_memory_utilization` or switching to eager mode. You can also reduce the `max_num_seqs` as needed to decrease memory usage.\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Capturing CUDA graph shapes: 100%|█████████████| 53/53 [00:50<00:00,  1.05it/s]\n"
+      "Capturing CUDA graph shapes: 100%|█████████████| 53/53 [00:51<00:00,  1.04it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO 05-30 20:36:06 [model_runner.py:1592] Graph capturing finished in 50 secs, took 3.52 GiB\n",
-      "INFO 05-30 20:36:06 [llm_engine.py:437] init engine (profile, create kv cache, warmup model) took 59.27 seconds\n",
+      "INFO 05-30 21:06:06 [model_runner.py:1592] Graph capturing finished in 51 secs, took 3.52 GiB\n",
+      "INFO 05-30 21:06:06 [llm_engine.py:437] init engine (profile, create kv cache, warmup model) took 60.09 seconds\n",
       "Unsloth: Just some info: will skip parsing ['post_feedforward_layernorm', 'pre_feedforward_layernorm']\n",
       "Unsloth: Just some info: will skip parsing ['post_feedforward_layernorm', 'pre_feedforward_layernorm']\n"
      ]
@@ -321,13 +321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18cac4c651cd433aa42b4dd69be505cd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "gather:   0%|          | 0/16 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trajectories = await art.gather_trajectories(\n",
-    "    (rollout(model, instance) for _ in range(64)),\n",
-    "    max_exceptions=16,\n",
+    "    (rollout(model, instance) for _ in range(16)),\n",
+    "    max_exceptions=2,\n",
     ")"
    ]
   },
