refactor: Optimize test result retrieval in RewardRunHook by batching pytest commands and handle empty test cases

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -96,7 +96,7 @@
     "        for task in tasks\n",
     "    ),\n",
     "    batch_size=4,\n",
-    "    max_batch_exceptions=4,\n",
+    "    # max_batch_exceptions=4,\n",
     "    max_concurrent_batches=4,\n",
     "    skip_batches=await model.get_step(),\n",
     "):\n",
