refactor: Simplify logging filter and improve command batching in rollout module and training notebook

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -413,12 +413,7 @@
     ")\n",
     "\n",
     "async for batch in art.trajectory_group_batches(\n",
-    "    (\n",
-    "        art.TrajectoryGroup(\n",
-    "            rollout(model, task) for _ in range(4)\n",
-    "        )\n",
-    "        for task in tasks\n",
-    "    ),\n",
+    "    (art.TrajectoryGroup(rollout(model, task) for _ in range(4)) for task in tasks),\n",
     "    batch_size=4,\n",
     "    # max_batch_exceptions=4,\n",
     "    max_concurrent_batches=4,\n",
