chore: Update model generics

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -109,7 +109,7 @@
     "    .pipe(as_instances_iter)\n",
     ")\n",
     "\n",
-    "async for batch in art.trajectory_group_batches(\n",
+    "async for trajectory_groups in art.trajectory_group_batches(\n",
     "    (\n",
     "        art.TrajectoryGroup(rollout(model, instance) for _ in range(4))\n",
     "        for instance in instances\n",
@@ -118,7 +118,7 @@
     "    max_concurrent_batches=4,\n",
     "    skip_batches=await model.get_step(),\n",
     "):\n",
-    "    await model.train(batch)"
+    "    await model.train(trajectory_groups)"
    ]
   }
  ],
