refactor: Adjust max_requeries in config, enhance error handling in rollout, and update training notebook with new configurations

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,11 +84,16 @@
     "    name=\"001\",\n",
     "    project=\"sweagent\",\n",
     "    config=ModelConfig(\n",
-    "        max_input_tokens=32_768,\n",
+    "        max_input_tokens=40_960,\n",
     "        system_prompt_suffix=\"\\n/no_think\",\n",
     "        xml_function_calling=True,\n",
     "    ),\n",
     "    base_model=\"Qwen/Qwen3-32B\",\n",
+    "    _internal_config=art.dev.InternalModelConfig(\n",
+    "        init_args=art.dev.InitArgs(\n",
+    "            max_seq_length=40_960,\n",
+    "        ),\n",
+    "    ),\n",
     ")\n",
     "await model.register(backend)"
    ]
@@ -118,7 +123,13 @@
     "    max_concurrent_batches=4,\n",
     "    skip_batches=await model.get_step(),\n",
     "):\n",
-    "    await model.train(trajectory_groups)"
+    "    await model.train(\n",
+    "        trajectory_groups,\n",
+    "        _config=art.dev.TrainConfig(\n",
+    "            enable_assistant_message_training=True,\n",
+    "            logprob_calculation_chunk_size=256,\n",
+    "        ),\n",
+    "    )"
    ]
   }
  ],
