fix: Improve error handling in eval_tests and update training configurations

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -34,6 +34,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import asyncio\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "from dotenv import load_dotenv\n",
     "import nest_asyncio\n",
     "import os\n",
@@ -45,6 +47,9 @@
     "\n",
     "os.makedirs(\"replays\", exist_ok=True)\n",
     "os.makedirs(\"trajectories\", exist_ok=True)\n",
+    "\n",
+    "loop = asyncio.get_event_loop()\n",
+    "loop.set_default_executor(ThreadPoolExecutor(max_workers=128))\n",
     "\n",
     "load_dotenv()\n",
     "nest_asyncio.apply()"
@@ -81,7 +86,7 @@
     "# INITIALIZE MODEL\n",
     "backend = LocalBackend()\n",
     "model = art.TrainableModel(\n",
-    "    name=\"001\",\n",
+    "    name=\"002\",\n",
     "    project=\"sweagent\",\n",
     "    config=ModelConfig(\n",
     "        max_input_tokens=40_960,\n",
@@ -120,14 +125,13 @@
     "        for instance in instances\n",
     "    ),\n",
     "    batch_size=4,\n",
-    "    max_concurrent_batches=4,\n",
+    "    max_concurrent_batches=2,\n",
     "    skip_batches=await model.get_step(),\n",
     "):\n",
     "    await model.train(\n",
     "        trajectory_groups,\n",
     "        _config=art.dev.TrainConfig(\n",
     "            enable_assistant_message_training=True,\n",
-    "            logprob_calculation_chunk_size=256,\n",
     "        ),\n",
     "    )"
    ]
