--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -12,9 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".cell-output-ipywidget-background {\n",
+       "    background-color: transparent !important;\n",
+       "}\n",
+       ":root {\n",
+       "    --jp-widgets-color: var(--vscode-editor-foreground);\n",
+       "    --jp-widgets-font-size: var(--vscode-editor-font-size);\n",
+       "}  \n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<style>\n",
@@ -34,8 +55,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "from concurrent.futures import ThreadPoolExecutor\n",
     "from dotenv import load_dotenv\n",
     "import nest_asyncio\n",
     "import os\n",
@@ -47,9 +66,6 @@
     "\n",
     "os.makedirs(\"replays\", exist_ok=True)\n",
     "os.makedirs(\"trajectories\", exist_ok=True)\n",
-    "\n",
-    "loop = asyncio.get_event_loop()\n",
-    "loop.set_default_executor(ThreadPoolExecutor(max_workers=128))\n",
     "\n",
     "load_dotenv()\n",
     "nest_asyncio.apply()"
