fix: Remove outdated instances from filter criteria and update model name in training notebook

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -39,6 +39,7 @@
     "import os\n",
     "\n",
     "# PREPARE ENVIRONMENT\n",
+    "os.environ[\"MODAL_IMAGE_BUILDER_VERSION\"] = \"2024.10\"\n",
     "os.environ[\"SWE_AGENT_CONFIG_DIR\"] = \".\"\n",
     "os.environ[\"SWE_AGENT_TOOLS_DIR\"] = \"tools\"\n",
     "os.environ[\"SWE_AGENT_TRAJECTORY_DIR\"] = \"trajectories\"\n",
@@ -81,7 +82,7 @@
     "# INITIALIZE MODEL\n",
     "backend = LocalBackend()\n",
     "model = art.TrainableModel(\n",
-    "    name=\"002\",\n",
+    "    name=\"004\",\n",
     "    project=\"sweagent\",\n",
     "    config=ModelConfig(\n",
     "        max_input_tokens=40_960,\n",
