--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -82,7 +82,7 @@
     "# INITIALIZE MODEL\n",
     "backend = LocalBackend()\n",
     "model = art.TrainableModel(\n",
-    "    name=\"004\",\n",
+    "    name=\"001\",\n",
     "    project=\"sweagent\",\n",
     "    config=ModelConfig(\n",
     "        max_input_tokens=40_960,\n",
@@ -126,9 +126,7 @@
     "):\n",
     "    await model.train(\n",
     "        trajectory_groups,\n",
-    "        _config=art.dev.TrainConfig(\n",
-    "            enable_assistant_message_training=True,\n",
-    "        ),\n",
+    "        _config=art.dev.TrainConfig(allow_training_without_logprobs=True),\n",
     "    )"
    ]
   }
@@ -149,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
