--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -43,6 +43,8 @@
     "os.environ[\"SWE_AGENT_CONFIG_DIR\"] = \".\"\n",
     "os.environ[\"SWE_AGENT_TOOLS_DIR\"] = \"tools\"\n",
     "os.environ[\"SWE_AGENT_TRAJECTORY_DIR\"] = \"trajectories\"\n",
+    "os.environ[\"WEAVE_PRINT_CALL_LINK\"] = \"False\"\n",
+    "os.environ[\"WEAVE_LOG_LEVEL\"] = \"CRITICAL\"\n",
     "\n",
     "os.makedirs(\"replays\", exist_ok=True)\n",
     "os.makedirs(\"trajectories\", exist_ok=True)\n",
@@ -105,8 +107,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import weave\n",
+    "\n",
     "from instances import as_instances_iter, get_filtered_swe_smith_instances_df\n",
     "from rollout import rollout\n",
+    "\n",
+    "weave.init(project_name=model.project)\n",
+    "rollout = weave.op(rollout)\n",
     "\n",
     "# TRAIN MODEL\n",
     "instances = (\n",
@@ -147,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
