chore: Test non-trainable vLLM deployment

--- a/dev/swebench/train.ipynb
+++ b/dev/swebench/train.ipynb
@@ -60,12 +60,12 @@
    "outputs": [],
    "source": [
     "import art\n",
-    "from art.local import LocalBackend\n",
+    "# from art.local import LocalBackend\n",
     "from rollout import ModelConfig\n",
     "\n",
     "# INITIALIZE MODEL\n",
-    "backend = LocalBackend()\n",
-    "model = art.TrainableModel(\n",
+    "# backend = LocalBackend()\n",
+    "model = art.Model(\n",
     "    name=\"001\",\n",
     "    project=\"sweagent\",\n",
     "    config=ModelConfig(\n",
@@ -73,14 +73,17 @@
     "        system_prompt_suffix=\"\\n/no_think\",\n",
     "        xml_function_calling=True,\n",
     "    ),\n",
-    "    base_model=\"Qwen/Qwen3-32B\",\n",
-    "    _internal_config=art.dev.InternalModelConfig(\n",
-    "        init_args=art.dev.InitArgs(\n",
-    "            max_seq_length=40_960,\n",
-    "        ),\n",
-    "    ),\n",
+    "    inference_api_key=\"default\",\n",
+    "    inference_base_url=\"http://0.0.0.0:8000/v1\",\n",
+    "    inference_model_name=\"Qwen/Qwen3-32B\",\n",
+    "    # base_model=\"Qwen/Qwen3-32B\",\n",
+    "    # _internal_config=art.dev.InternalModelConfig(\n",
+    "    #     init_args=art.dev.InitArgs(\n",
+    "    #         max_seq_length=40_960,\n",
+    "    #     ),\n",
+    "    # ),\n",
     ")\n",
-    "await model.register(backend)"
+    "# await model.register(backend)"
    ]
   },
   {
@@ -111,12 +114,13 @@
     "    ),\n",
     "    batch_size=4,\n",
     "    max_concurrent_batches=3,\n",
-    "    skip_batches=await model.get_step(),\n",
+    "    # skip_batches=await model.get_step(),\n",
     "):\n",
-    "    await model.train(\n",
-    "        trajectory_groups,\n",
-    "        _config=art.dev.TrainConfig(allow_training_without_logprobs=True),\n",
-    "    )"
+    "    print(\"TRAINING\")\n",
+    "    # await model.train(\n",
+    "    #     trajectory_groups,\n",
+    "    #     _config=art.dev.TrainConfig(allow_training_without_logprobs=True),\n",
+    "    # )"
    ]
   }
  ],
