--- a/dev/swebench/vllm.ipynb
+++ b/dev/swebench/vllm.ipynb
@@ -83,6 +83,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from art.multidevice.vllm import run_on_workers\n",
+    "import os\n",
+    "import signal\n",
+    "\n",
+    "pids = await run_on_workers(llm, lambda: os.getpid())\n",
+    "for pid in pids:\n",
+    "    os.kill(pid, signal.SIGSTOP)\n",
+    "# for pid in pids:\n",
+    "#     os.kill(pid, signal.SIGCONT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for pid in pids:\n",
+    "    os.kill(pid, signal.SIGCONT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "await llm.sleep()"
    ]
   },
