feat: Integrate asyncio sleep functionality in vllm.ipynb and enhance worker management in vllm.py
- Added asyncio support for managing worker sleep state in vllm.ipynb.
- Updated signal handling to include resuming workers after sleep.
- Enhanced get_llm function to utilize the new patch_worker_sleep functionality.

--- a/dev/swebench/vllm.ipynb
+++ b/dev/swebench/vllm.ipynb
@@ -84,14 +84,24 @@
    "outputs": [],
    "source": [
     "from art.multidevice.vllm import run_on_workers\n",
+    "import asyncio\n",
     "import os\n",
     "import signal\n",
     "\n",
     "pids = await run_on_workers(llm, lambda: os.getpid())\n",
+    "sleep_task = asyncio.create_task(llm.sleep())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for pid in pids:\n",
-    "    os.kill(pid, signal.SIGSTOP)\n",
-    "# for pid in pids:\n",
-    "#     os.kill(pid, signal.SIGCONT)"
+    "    os.kill(pid, signal.SIGCONT)\n",
+    "await sleep_task\n",
+    "# await llm.wake_up()"
    ]
   },
   {
