fix: Update execution counts and enhance tensor parallelism in vllm.ipynb
- Set execution count for the initial code cell to 1.
- Added import for torch to facilitate dynamic tensor parallel size.
- Updated tensor_parallel_size to use the number of available CUDA devices.
- Reset execution count for a later code cell to null.

--- a/dev/swebench/vllm.ipynb
+++ b/dev/swebench/vllm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,15 @@
    "outputs": [],
    "source": [
     "from art.multidevice.vllm import get_llm\n",
+    "import torch\n",
     "import vllm\n",
     "\n",
     "llm = await get_llm(\n",
     "    vllm.AsyncEngineArgs(\n",
     "        model=\"Qwen/Qwen3-32B\",\n",
     "        # pipeline_parallel_size=1,\n",
-    "        tensor_parallel_size=2,\n",
-    "        data_parallel_size=2,\n",
+    "        tensor_parallel_size=torch.cuda.device_count(),\n",
+    "        # data_parallel_size=1,\n",
     "        enforce_eager=True,\n",
     "        generation_config=\"vllm\",\n",
     "    ),\n",
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
